<resources>
    <string name="app_name">The Summoning</string>

    <string name="explanation">Welcome to the covernant</string>

    <string name="approach_the_pentagram">Approach the pentagram!</string>
    <string name="commence">To commence counjuring tap the northern point</string>
    <string name="next_point">Conjur clockwise \n Tap the next corner of the pentagram!</string>

    <string name="work_experience_page_title">Work Experience</string>
    <string name="title_activity_work_experience">WorkExperience</string>
    <string name="work_title">Your current job title</string>
    <string name="work_description">Describe your role</string>

    <string name="skills_page_title">Your Skills</string>
    <string name="skill">Skills</string>
    <string name="list_skills">List your skills</string>

    <string name="education_page_title">Your Education</string>
    <string name="education_level">Select your highest level of education</string>
    <string name="education_institution">Select your university</string>
    <string name="education_course">Tell us what you studied</string>
    <string name="add_to_summoning">Add to Summoning!</string>

    <string-array name="education_level_array">
        <item>High School Diploma</item>
        <item>Foundation</item>
        <item>Trade Certificate</item>
        <item>Undergraduate Degree</item>
        <item>Masters Degree</item>
        <item>PhD</item>
    </string-array>

    <string-array name="education_institution_array">
        <item>UPC</item>
        <item>UB</item>
        <item>UoM</item>
        <item>Edinbrugh</item>
    </string-array>

    <string name="personal_page_title">Conjurers Details</string>

    <string name="chosen">The pentagram has chosen!</string>
    <string name="chosen_job">Seal your fate, apply to the job below</string>

</resources>
